<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="10dip"
    android:layout_marginBottom="10dip">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/topBox"
        android:layout_width="wrap_content"
    	android:layout_height="100dp">
	    <ImageButton
	        android:id="@+id/upvote"
	       	android:layout_width="32dp"
			android:layout_height="32dp"
			android:scaleType="fitXY"
	        android:src="@drawable/upvote"
	        android:background="@drawable/square_button"
	        android:contentDescription="@string/upvote"/>
	   	<ImageButton
	        android:id="@+id/downvote"
	        android:layout_width="32dp"
			android:layout_height="32dp"
			android:scaleType="fitXY"
	        android:layout_below="@id/upvote"
	        android:src="@drawable/downvote"
	        android:background="@drawable/square_button"
	        android:contentDescription="@string/downvote"/>
	   	<TextView
	   	    android:id="@+id/status"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="fill_parent"
	   	    android:layout_toRightOf="@id/upvote"/>
	</RelativeLayout>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/middleBox"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/topBox">
	    <ImageButton
	        android:id="@+id/prev"
	        android:layout_width="32dp"
			android:layout_height="32dp"
			android:scaleType="fitXY"
	        android:src="@drawable/prev"
	        android:background="@drawable/square_button"
	        android:contentDescription="@string/prev"/>
	    <ImageButton
	        android:id="@+id/action"
	        android:layout_width="32dp"
			android:layout_height="32dp"
			android:scaleType="fitXY"
	        android:layout_toRightOf="@id/prev"
	        android:src="@drawable/play"
	        android:background="@drawable/square_button"
	        android:contentDescription="@string/playpause"/>
	    <ImageButton
	        android:id="@+id/next"
	        android:layout_width="32dp"
			android:layout_height="32dp"
			android:scaleType="fitXY"
	        android:layout_toRightOf="@id/action"
	        android:src="@drawable/next"
	        android:background="@drawable/square_button"
	        android:contentDescription="@string/next"/>
    </RelativeLayout>
	<ImageButton
        android:id="@+id/record"
        android:layout_width="32dp"
		android:layout_height="32dp"
		android:scaleType="fitXY"
        android:layout_below="@id/middleBox"
        android:src="@drawable/record"
        android:background="@drawable/square_button"
        android:contentDescription="@string/record"/>
</RelativeLayout>